# function-loader

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  function-loader-config.cmake.in
cmake/: GenPkgConfig.cmake
demo-library/: CMakeLists.txt  post_build_steps.cmake
demo-library/src/: demo-library.cpp  demo-library.hpp
example/: CMakeLists.txt
example/src/: .gitignore  demo-library.cpp  demo-library.hpp  main.cpp  main.cpp.in
include/function-dll-extractor/: library_loader.windows.hpp
include/function_extractor/: exceptions.hpp  function_extractor.hpp  function_loader.hpp  library_loader.hpp  library_loader_interface.hpp
include/function_extractor/detail/: function_loader_base.hpp  function_loader_base_unix.hpp  function_loader_base_windows.hpp  function_loader_impl.hpp  function_loader_impl_windows.hpp  library_loader.hpp  library_loader_base.hpp  library_loader_base_unix.hpp  library_loader_base_windows.hpp  library_loader_impl.hpp  library_loader_impl_unix.hpp  library_loader_impl_windows.hpp
include/function_extractor/private/: library_loader.base.hpp  library_loader.windows.hpp  library_loader_impl.hpp  library_loader_impl_unix.hpp  library_loader_impl_windows.hpp  library_loader_interface.hpp
include/function_loader/: exceptions.hpp  function_loader.hpp
include/function_loader/detail/: function_loader_base.hpp  function_loader_base_unix.hpp  function_loader_base_windows.hpp  function_loader_platform_specific.hpp  function_loader_platform_specific_unix.hpp  function_loader_platform_specific_windows.hpp  library_loader.hpp  library_loader_base.hpp  library_loader_base_unix.hpp  library_loader_base_windows.hpp  library_loader_platform_specific.hpp  library_loader_platform_specific_unix.hpp  library_loader_platform_specific_windows.hpp
include/function_loader/detail/cpp_utils/primitives/: idisable_copy.hpp
include/function_loader/detail/primitives/: idisable_copy.hpp  idisable_move.hpp
tests/unit/: CMakeLists.txt
tests/unit/include/: helpers.hpp
tests/unit/src/: exceptions_test.cpp  function_loader_test.cpp  library_loader_test.cpp
